Fix styling so that recipe index items are centered on smaller screens

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -933,7 +933,7 @@ section.recipes-index {
 
 @media (max-width: 499px) {
   section.recipes-index {
-    width: 330px;
+    width: 310px;
   }
 }
 
